# vapoursynth-resize2

./: meson.build  meson_options.txt
subprojects/: zimg.wrap
subprojects/packagefiles/zimg/: 0001.patch  meson.build
